PiZero improved with DiffFluxSkymapRange implemented

--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,8 @@
 # INSTALL
 
+    export HERMES_INSTALL_DIR=$HOME/.local
     mkdir build
     cd build
-    cmake ..
+    cmake .. -DCMAKE_INSTALL_PREFIX=$HERMES_INSTALL_DIR
     make
+    make install
